Version 1.6.0-dev
  * Support GDAL version 2.1.0.
  * Add the MapServer 7.0.1 internal support.
  * Support for exotic location of openssl.
  * Add ZOO-Client API documentation reference in the official documentation.
  * Add CORS support.
  * Fix issue when dealing with Array in JavaScript support.
  * Update the Centos installation procedure.
  * Small fixes in java support.
  * Fix issue when XML request contains empty nodes for inputs
  * Add status update for contour lines computation
  * Fix FASTCGI location using the --with-fastcgi option.
  * Redefined the API function addToMapWithSize to fix problem with Python/PHP support.

Version 1.5.0
  * Complete rewrite of the documentation to use modern style
  * Fix asynchronous POST request on WIN32 platforms
  * Add utils/registry service
  * Initial support for WPS 2.0.0 including the Dismiss extension
  * Fix concurrency access to status information
  * Use simple file rather than shared memory for storing status information
  * Add support for db backend to store status information
  * Add the lib_zoo_service shared library to be linked against C services
  * Add ZOO-API for the PHP language (with documentation)
  * Add doxygen comments in source code
  * Add support for multiple Exception nodes
  * Add a length key when creating MapArray
  * Add OTB support for applications as a service
  * Add the otb2zcfg utility to produce zcfg for otb applications
  * Add OTB Application Observer to have progress status updates
  * Fix maxOccurs handling
  * Fix gesture of downloaded inputs when multiple values are given
  * Add detection of generated_file key in outputs to read the file
  generated by a service
  * Add a minimal parsing API 
  * Run validateRequest (download, default settings and decoding)
  after fork if any
  * Add SAGA-GIS support for modules as a service
  * Add saga2zcfg utility to generate zcfg for SAGA-GIS modules
  * Add SAGA-GIS Observer to have ongoing status updates

Version 1.4.0