@@ -1,4 +1,6 @@
 Version 1.6.0-dev
+  * Add servicePath special key to specify the service location
+  * Add --with-etc-dir option to specify the location of the main.cfg file
   * Support GDAL version 2.1.0.
   * Add the MapServer 7.0.1 internal support.
   * Support for exotic location of openssl.
